--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -1,4 +1,1 @@
-<header>
-  <h1>{{ title | safe }}</h1>
-</header>
-{%- if summary %}<summary>{{ summary | safe }}</summary>{% endif %}
+<header>{% include "colophon.njk" %}</header>
