--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -5,8 +5,10 @@ html, body {
   padding:0;
   font-family: serif;
   color: #333;
+  background-color: #efefef;
   font-size: 1.125em;
   line-height: 1.42em;
+  -webkit-font-smoothing: antialiased;
 }
 
 header {
@@ -15,8 +17,9 @@ header {
 }
 
 main {
-  padding: 0 2em;
-  max-width: 40em;
+  margin: 0;
+  padding: 0.25em 1em;
+  background-color: #fff;
 }
 
 footer {
@@ -25,20 +28,53 @@ footer {
 }
 
 h1 {
-  font-family: sans-serif;
   font-size: 4em;
-  font-weight: 600;
+  font-style: italic;
+  font-weight: 400;
   color: #000;
   line-height: 1em;
   margin: 0.4em 0 0.56em 0;
 }
 
-ul {
-  padding-left: 2em;
-  margin: 1em 0;
+pre {
+  overflow-x: auto;
 }
 
-pre {
-  white-space: pre-wrap;
-  word-wrap: break-word;
+blockquote {
+  border-left: 0.5em solid #666;
+  padding: 1em 0 1em 1em;
+  margin: 2em 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 2em auto;
+}
+
+.embed {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+
+.embed iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-width: 760px) {
+  header, footer {
+    text-align: center;
+  }
+  main {
+    margin: 0 auto;
+    padding: 1.25em 2em;
+    max-width: 32em;
+  }
 }
